--- a/test-spec/test-runner.css
+++ b/test-spec/test-runner.css
@@ -24,44 +24,48 @@ td {
 a img {
     border: none;
 }
+h1:hover,h2:hover,h3:hover,h4:hover,h5:hover,h6:hover
+{
+    color: #0A0;
+    text-decoration:underline;
+}
+h1,h2,h4,h4,h5,h6
+{
+    line-height: 1;
+    margin-bottom: 0.25em;
+}
 h1 {
     font-size: 2em;
     font-weight: 900;
     margin-top: 1em;
-    margin-bottom: 0.25em;
-    line-height: 1;
 }
 h2 {
+
+    /*font-style:normal;*/
+    /*font-style:italic;*/
+    /*font-style:oblique;*/
+    /*color: #0A0;*/
+
     font-size: 1.8em;
     font-weight: 500;
     margin-top: 1em;
-    margin-bottom: 0.25em;
-    line-height: 1;
 }
 h3 {
     font-size: 1.6em;
     font-weight: 400;
     margin-top: 0.75em;
-    margin-bottom: 0.25em;
-    line-height: 1;
 }
 h4 {
     font-size: 1.4em;
     margin-top: 0.75em;
-    margin-bottom: 0.25em;
-    line-height: 1;
 }
 h5 {
     font-size: 1.3em;
     margin-top: 0.5em;
-    margin-bottom: 0.25em;
-    line-height: 1;
 }
 h6 {
     font-size: 1.2em;
     margin-top: 0.5em;
-    margin-bottom: 0.25em;
-    line-height: 1;
 }
 p {
     font-weight:normal;
