--- a/test-spec/test-runner.css
+++ b/test-spec/test-runner.css
@@ -63,6 +63,8 @@ p {
     font-weight: normal;
     margin-top: 0.25em;
     margin-bottom: 0.5em;
+    word-break: break-all;
+    white-space: normal;
 }
 
 li {
@@ -77,19 +79,20 @@ strong {
     font-weight: bolder;
 }
 
-/*pre {*/
-    /*max-width: 980px;*/
+pre {
+    max-width: 100%;
     /*min-width: 98px;*/
     /*overflow: hidden;*/
     /*background: #fff;*/
     /*border: solid;*/
     /*border-width: thin;*/
-    /*white-space: pre-wrap;*/
+    white-space: pre-wrap;
     /*margin-top: 0em;*/
     /*margin-bottom: 0.25em;*/
     /*margin-left: 0.25em;*/
     /*margin-right: 0.25em;*/
-/*}*/
+}
+
 /*pre.fail {*/
     /*background: #fcc;*/
 /*}*/
@@ -99,6 +102,7 @@ strong {
 /*pre.skip {*/
     /*background: #fcf;*/
 /*}*/
+
 code {
     font-weight: normal;
     border: none;
@@ -205,7 +209,7 @@ button:active {
     border-radius: 5px 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); -webkit-box-shadow: 5px 5px rgba(0, 0, 0, 0.1); -moz-box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
     font-family: Calibri, Tahoma, Geneva, sans-serif;
-    position: absolute; left: 1em; top: 2em; z-index: 99;
+    position: absolute; left: -3em; top: 3em; z-index: 99;
     margin-left: 0; width: 250px;
 }
 .tooltip:hover img {
