--- a/test-spec/test-runner.css
+++ b/test-spec/test-runner.css
@@ -10,13 +10,16 @@ td {
     font-size: 100%;
     vertical-align: baseline;
 }
-
+p {
+    /*word-break: normal;*/
+    /*white-space: normal;*/
+}
 body {
     font: 15px/1.5 "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #000;
     background: #fff;
     background-color: #F8F8F0;
-    padding-top: 32px;
+    padding-top: 64px;
     padding-bottom: 32px;
     padding-left: 0px;
     padding-right: 0px;
@@ -63,8 +66,6 @@ p {
     font-weight: normal;
     margin-top: 0.25em;
     margin-bottom: 0.5em;
-    word-break: break-all;
-    white-space: normal;
 }
 
 li {
@@ -131,10 +132,17 @@ button {
     border-radius: 3px;
     color: #333;
     font: bold 20px/1.25 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-    padding: 8px 6px;
+    padding-top: 8px;
+    padding-left: 6px;
+    padding-bottom: 8px;
+    padding-right: 6px;
+    margin-top: 2px;
+    margin-right: 1px;
+    margin-left: 1px;
+    margin-bottom: 3px;
     text-align: center;
     text-shadow: 0 1px 0 #eee;
-    /*width: 120px;*/
+    opacity:0.92;
 }
 button:hover {
     background-color: #dddddd;
@@ -150,13 +158,19 @@ button:hover {
     text-shadow: 0 1px 0 #ddd;
 }
 button:active {
+    padding-top: 9px;
+    padding-left: 7px;
+    padding-bottom: 7px;
+    padding-right: 5px;
+    /*margin-top: 1px;*/
+    margin-bottom: 3px;
     border: 1px solid #aaa;
     border-bottom: 1px solid #888;
     -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
     box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
 }
 .counter {
-    color: #000;
+    color: #07F;
     -webkit-box-shadow: inset 0 0 5px 2px #aaa, 0 1px 0 0 #eee;
     padding-top: 0px;
     padding-right: 4px;
@@ -207,10 +221,11 @@ button:active {
 }
 .tooltip:hover span {
     border-radius: 5px 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); -webkit-box-shadow: 5px 5px rgba(0, 0, 0, 0.1); -moz-box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3); -webkit-box-shadow: 3px 3px rgba(0, 0, 0, 0.3); -moz-box-shadow: 3px 3px rgba(0, 0, 0, 0.3);
     font-family: Calibri, Tahoma, Geneva, sans-serif;
-    position: absolute; left: -3em; top: 3em; z-index: 99;
+    position: absolute; left: -3em; top: 4em; z-index: 99;
     margin-left: 0; width: 250px;
+    opacity:0.99;
 }
 .tooltip:hover img {
     border: 0; margin: -10px 0 0 -55px;
