--- a/interface/tequila-interface-bootstrap3-prototype/interface.css
+++ b/interface/tequila-interface-bootstrap3-prototype/interface.css
@@ -7,6 +7,14 @@ body {
     padding-top: 50px; /* fixed navbar */
 }
 
+.ti-shortcut-button {
+    overflow: hidden;
+    height: 128px;
+    width: 112px;
+    margin: 4px;
+    padding: 16px
+}
+
 .panel-glyphs {
     padding: 0px;
     margin-top: -2px;
