--- a/interface/tequila-interface-bootstrap3-prototype/interface.css
+++ b/interface/tequila-interface-bootstrap3-prototype/interface.css
@@ -5,14 +5,42 @@
 
 body {
     padding-top: 50px; /* fixed navbar */
+
+    background-color: #e0e7f0;
+
+}
+
+.panel {
+    -moz-box-shadow:    2px 2px 5px 1px #becedd;
+    -webkit-box-shadow: 2px 2px 5px 1px #becedd;
+    box-shadow:         2px 2px 5px 1px #becedd;
+    margin-bottom: 12px;
+}
+
+.panel.over {
+    border: 2px dashed #000;
+}
+
+.ti-shortcut-panel-body {
+    margin: 4px;
+    padding: 0px;
+    vertical-align: middle;
 }
 
 .ti-shortcut-button {
     overflow: hidden;
-    height: 128px;
-    width: 112px;
-    margin: 4px;
-    padding: 16px
+    height: 88px;
+    width: 88px;
+    font-size: 12px;
+    line-height: 1.25;
+    margin-top: 1px;
+    margin-right: 1px;
+    margin-left: 1px;
+    margin-bottom: 1px;
+    padding-top: 16px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-bottom: 0px;
 }
 
 .panel-glyphs {
@@ -23,4 +51,19 @@ body {
     margin-bottom: 0px;
     font-size: 18px;
     text-align: center;
+}
+
+.well-tight {
+    margin-bottom: 0;
+}
+
+.panel-heading-home {
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.navbar-collapse {
+    padding-right: 0;
 }
