--- a/interface/tequila-interface-bootstrap3-prototype/interface.css
+++ b/interface/tequila-interface-bootstrap3-prototype/interface.css
@@ -51,6 +51,10 @@ body {
     margin-bottom: 12px;
 }
 
+.panel-body {
+    padding: 12px;
+}
+
 .panel.over {
     border: 2px dashed #000;
 }
@@ -98,6 +102,25 @@ body {
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+@media (max-width: 480px) {
+    .panel-container {
+        padding:0px;
+    }
+    .panel {
+        margin-bottom: 2px;
+    }
+    .panel-heading-home {
+        padding-right: 2px;
+        padding-left: 2px;
+        padding-top: 2px;
+        padding-bottom: 2px;
+    }
+    .navbar-shunt {
+        height: 38px;
+    }
+}
+
 
 .navbar-collapse {
     padding-right: 0;
