--- a/interface/tequila-interface-bootstrap3-prototype/interface.css
+++ b/interface/tequila-interface-bootstrap3-prototype/interface.css
@@ -59,7 +59,7 @@ body {
     border: 2px dashed #000;
 }
 
-.ti-shortcut-panel-body {
+.panel-body-home {
     margin: 0px;
     padding: 4px;
     background-color: #bebebe;
