--- a/interface/tequila-interface-bootstrap3-prototype/interface.css
+++ b/interface/tequila-interface-bootstrap3-prototype/interface.css
@@ -51,6 +51,30 @@ body {
     margin-bottom: 12px;
 }
 
+.panel-default {
+    background-color: #f5f5f5;
+}
+
+.panel-primary {
+    background-color: #428bca;
+}
+
+.panel-success  {
+    background-color: #dff0d8;
+}
+
+.panel-warning  {
+    background-color: #fcf8e3;
+}
+
+.panel-danger  {
+    background-color: #f2dede;
+}
+
+.panel-info {
+    background-color: #d9edf7;
+}
+
 .panel-body {
     padding: 12px;
 }
@@ -92,8 +116,16 @@ body {
     text-align: center;
 }
 
-.well-tight {
+.well-fucking-well {
+    border-radius: 3px;
+    min-height: 20px;
+    padding: 9px;
     margin-bottom: 0;
+    background-color: rgba(250, 250, 250, 0.85);
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
 .panel-heading-home {
