--- a/samples/prototypes/tequila-interface-f7/app.css
+++ b/samples/prototypes/tequila-interface-f7/app.css
@@ -1,11 +1,12 @@
 .button.button-tall {
     line-height: 24px;
     height: 90px;
-    padding: 0 10px;
+    padding: 0 2px;
     margin-top: 0px;
     margin-right: 0;
     margin-left: 0;
     margin-bottom: 10px;
+    border-radius: 12px;
 
 }
 
