--- a/samples/prototypes/tequila-interface-f7/app.css
+++ b/samples/prototypes/tequila-interface-f7/app.css
@@ -10,6 +10,13 @@
 
 }
 
+/* makes the font 33% larger relative to the icon container */
+.fa-lg {
+    font-size: 1.5em; /* was 1.3333333333333333em; */
+    line-height: 0.75em;
+    vertical-align: -15%;
+}
+
 .panel {
     background: #222;
     color: #dddddd;
