--- a/samples/prototypes/tequila-interface-f7/app.css
+++ b/samples/prototypes/tequila-interface-f7/app.css
@@ -1,12 +1,16 @@
 .button.button-tall {
-    line-height: 24px;
+    line-height: 18px;
     height: 90px;
     padding: 0 2px;
     margin-top: 0px;
     margin-right: 0;
+    white-space: normal;
     margin-left: 0;
     margin-bottom: 10px;
     border-radius: 12px;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
 
 }
 
