--- a/samples/prototypes/tequila-interface-f7/app.css
+++ b/samples/prototypes/tequila-interface-f7/app.css
@@ -9,8 +9,8 @@
     margin-bottom: 10px;
     border-radius: 12px;
     font-size: 12px;
-    font-weight: bold;
-    font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
+    font-weight: normal;
+    font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 
 }
 
