--- a/samples/prototypes/tequila-interface-f7/app.css
+++ b/samples/prototypes/tequila-interface-f7/app.css
@@ -1,15 +1,19 @@
 .button.button-tall {
-    line-height: 16px;
+    border: none;
+    line-height: 15px;
     height: 96px;
-    padding: 0 2px;
+    padding-top: 6px;
+    padding-right: 2px;
+    padding-left: 2px;
+    padding-bottom: 0;
     margin-top: 0px;
     margin-right: 0;
-    white-space: normal;
     margin-left: 0;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    white-space: normal;
     border-radius: 12px;
-    font-size: 12px;
-    font-weight: normal;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .button-red {
@@ -27,19 +31,18 @@
     vertical-align: -15%;
 }
 .row .col-33 {
+    text-shadow: 1px 1px 3px rgba(128, 128, 128, 0.75);
+
     margin-right: 4px;
     margin-left: 4px;
 }
 .content-block-menu {
-    margin-top: 16px;
-    margin-right: 0;
-    margin-left: 0;
-    margin-bottom: 12px;
+    margin: 0;
 
-    padding-top: 0;
+    padding-top: 10px;
     padding-right: 0;
-    padding-left: 12px;
-    padding-bottom: 0;
+    padding-left: 6px;
+    padding-bottom: 256px;
 }
 
 .panel {
