--- a/samples/prototypes/tequila-interface-f7/app.css
+++ b/samples/prototypes/tequila-interface-f7/app.css
@@ -54,11 +54,11 @@
 }
 .content-block-menu {
     margin: 0;
-
+    background-color: #e7e7e7;
     padding-top: 10px;
     padding-right: 0;
     padding-left: 6px;
-    padding-bottom: 256px;
+    padding-bottom: 10px;
 }
 
 .panel {
