--- a/samples/prototypes/tequila-interface-f7/app.css
+++ b/samples/prototypes/tequila-interface-f7/app.css
@@ -1,3 +1,9 @@
+.list-block-top-search {
+    margin: 0;
+    /*font-size: 17px;*/
+}
+
+
 .fa-badge-fix {
     /* Hacked i.ks-tabbar-icon-4 to work with fontawesome*/
     width: 25px;
@@ -60,13 +66,12 @@
 }
 .content-block-menu {
     margin: 0;
-    background-color: #e7e7e7;
     padding-top: 10px;
     padding-right: 0;
     padding-left: 6px;
     padding-bottom: 10px;
 }
-
+/*  Rest from kitchen-sink.css (F7) */
 .panel {
     background: #222;
     color: #dddddd;
@@ -119,10 +124,6 @@
 .panel-right .list-block a:active {
     background: #000;
 }
-
-
-
-
 .popover {
     width: 280px;
 }
@@ -145,48 +146,6 @@
 .ks-preloader-big {
     width: 42px;
     height: 42px;
-}
-.page[data-page="messages"] .page-content {
-    padding-bottom: 44px;
-}
-.page[data-page="messages"] .toolbar {
-    -webkit-transform: none;
-    -moz-transform: none;
-    -ms-transform: none;
-    -o-transform: none;
-    transform: none;
-}
-.page[data-page="messages"] .ks-messages-input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 1px solid #c8c8cd;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: none;
-    display: block;
-    padding: 0px 8px 0px;
-    margin: 0;
-    width: 100%;
-    height: 28px;
-    color: #000;
-    font-size: 17px;
-    margin-right: 15px;
-    font-family: inherit;
-}
-html[dir="rtl"] .page[data-page="messages"] .ks-messages-input {
-    margin-left: 15px;
-    margin-right: 0;
-}
-.page[data-page="messages"] .ks-send-message {
-    -webkit-flex-shrink: 0;
-    -moz-flex-shrink: 0;
-    -ms-flex-shrink: 0;
-    flex-shrink: 0;
 }
 .statusbar-overlay {
     background: #000;
@@ -325,4 +284,53 @@ i.ks-tabbar-icon-4 {
 }
 .ks-slider-custom .slider-prev-button {
     left: 0;
+}
+.custom-accordion {
+    padding-left: 0;
+    padding-right: 0;
+}
+.custom-accordion .accordion-item-toggle {
+    padding: 0px 15px;
+    height: 44px;
+    line-height: 44px;
+    font-size: 17px;
+    color: #000;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+}
+.custom-accordion .accordion-item-toggle:active {
+    background: rgba(0, 0, 0, 0.15);
+}
+.custom-accordion .accordion-item-toggle span {
+    display: inline-block;
+    margin-left: 15px;
+}
+html[dir="rtl"] .custom-accordion .accordion-item-toggle span {
+    margin-left: 0;
+    margin-right: 15px;
+}
+.custom-accordion .accordion-item:last-child .accordion-item-toggle {
+    border-bottom: none;
+}
+.custom-accordion .icon-plus,
+.custom-accordion .icon-minus {
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    border: 1px solid #000;
+    border-radius: 100%;
+    line-height: 20px;
+    text-align: center;
+}
+.custom-accordion .icon-minus {
+    display: none;
+}
+.custom-accordion .accordion-item-expanded .icon-minus {
+    display: inline-block;
+}
+.custom-accordion .accordion-item-expanded .icon-plus {
+    display: none;
+}
+.custom-accordion .accordion-item-content {
+    padding: 0px 15px;
 }
